azure-disk.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disk-test-Pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - comtainerPort: 80
    volumeMounts:
    - name: azure-disk
      mountPath: /data
  volumes:
  - name: azure-disk
    persistentVolumeClaim:
      claimName: my-disk-pvc
